Fix map display on tablet + booking button

--- a/css/style.less
+++ b/css/style.less
@@ -225,6 +225,10 @@ header {
     border-radius: 10px;
 }
 
+#booking_btn {
+    margin-bottom: 1em;
+}
+
 /*********** Booking panel ***********/
 
 #booking_panel {
@@ -370,7 +374,7 @@ header {
 
     #map {
         width: 90vw;
-        height: 90vw;
+        height: 45vw;
     }
 
     #info_station {
